--- a/Adventure/Adventure.csproj
+++ b/Adventure/Adventure.csproj
@@ -175,9 +175,11 @@
     <Content Include="Content\css\bootstrap-reboot.css" />
     <Content Include="Content\css\mixins\_text-hide.css" />
     <Content Include="Content\flaticon.css" />
+    <Content Include="Content\form-elements.css" />
     <Content Include="Content\icomoon.css" />
     <Content Include="Content\ionicons.min.css" />
     <Content Include="Content\jquery.timepicker.css" />
+    <Content Include="Content\Loginstyle.css" />
     <Content Include="Content\magnific-popup.css" />
     <Content Include="Content\open-iconic-bootstrap.min.css" />
     <Content Include="Content\owl.carousel.min.css" />
@@ -253,6 +255,8 @@
     <Content Include="fonts\open-iconic\open-iconic.woff" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\google-map.js" />
+    <Content Include="Scripts\jquery-1.11.1.js" />
+    <Content Include="Scripts\jquery-1.11.1.min.js" />
     <Content Include="Scripts\jquery-3.2.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -261,6 +265,8 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-migrate-3.0.1.min.js" />
     <Content Include="Scripts\jquery.animateNumber.min.js" />
+    <Content Include="Scripts\jquery.backstretch.js" />
+    <Content Include="Scripts\jquery.backstretch.min.js" />
     <Content Include="Scripts\jquery.easing.1.3.js" />
     <Content Include="Scripts\jquery.magnific-popup.min.js" />
     <Content Include="Scripts\jquery.min.js" />
@@ -273,8 +279,12 @@
     <Content Include="Scripts\main.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\owl.carousel.min.js" />
+    <Content Include="Scripts\placeholder.js" />
     <Content Include="Scripts\popper.min.js" />
     <Content Include="Scripts\range.js" />
+    <Content Include="Scripts\retina-1.1.0.js" />
+    <Content Include="Scripts\retina-1.1.0.min.js" />
+    <Content Include="Scripts\scripts.js" />
     <Content Include="Scripts\scrollax.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -290,6 +300,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Login\Login_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -297,7 +309,6 @@
     <Folder Include="Views\Activity\" />
     <Folder Include="Views\Blog\" />
     <Folder Include="Views\HomeStay\" />
-    <Folder Include="Views\Login\" />
     <Folder Include="Views\Register\" />
   </ItemGroup>
   <ItemGroup>
