--- a/Adventure/packages.config
+++ b/Adventure/packages.config
@@ -26,6 +26,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net45" />
   <package id="Oracle.ManagedDataAccess" version="19.3.0" targetFramework="net45" />
+  <package id="sqlSugar" version="5.0.0.8" targetFramework="net45" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
