--- a/Adventure/Adventure.csproj
+++ b/Adventure/Adventure.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Controllers\HomeStayController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
+    <Compile Include="Controllers\PersonInfoController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -328,6 +329,7 @@
     <Content Include="Views\Order\Order_Layout.cshtml" />
     <Content Include="Views\Order\Index.cshtml" />
     <Content Include="Views\Blog\Index.cshtml" />
+    <Content Include="Views\PersonInfo\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
