--- a/Adventure/Adventure.csproj
+++ b/Adventure/Adventure.csproj
@@ -195,6 +195,12 @@
     <Content Include="Content\owl.carousel.min.css" />
     <Content Include="Content\owl.theme.default.min.css" />
     <Content Include="Content\style.css" />
+    <Content Include="Content\uploadify\jquery.uploadify-3.1.js" />
+    <Content Include="Content\uploadify\jquery.uploadify-3.1.min.js" />
+    <Content Include="Content\uploadify\swfobject.js" />
+    <Content Include="Content\uploadify\uploadify-cancel.png" />
+    <Content Include="Content\uploadify\uploadify.css" />
+    <Content Include="Content\uploadify\uploadify.swf" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\flaticon\font\flaticon.css" />
     <Content Include="fonts\flaticon\font\flaticon.html" />
@@ -277,6 +283,8 @@
     <Content Include="fonts\Oswald-Light.ttf" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\google-map.js" />
+    <Content Include="Scripts\Infoscripts.js" />
+    <Content Include="Scripts\jquery-1.7.1.min.js" />
     <Content Include="Scripts\jquery-3.2.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -330,6 +338,7 @@
     <Content Include="Views\Order\Index.cshtml" />
     <Content Include="Views\Blog\Index.cshtml" />
     <Content Include="Views\PersonInfo\Index.cshtml" />
+    <Content Include="Views\PersonInfo\PersonInfo_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
