后台大部分完成 页面搜索处理框架搭好，订单处理框架基本搭好，解决匿名类问题，活动实例优化，添加zyf的房源

--- a/Adventure/Adventure.csproj
+++ b/Adventure/Adventure.csproj
@@ -1121,28 +1121,28 @@
     <Content Include="Views\Activity\Index.cshtml" />
     <Content Include="Views\Activity\Publish.cshtml" />
     <Content Include="Views\Activity\SingleActivity.cshtml" />
-    <Content Include="Views\Admin\AddActivity.cshtml" />
-    <Content Include="Views\Admin\AddHomestay.cshtml" />
-    <Content Include="Views\Admin\Admin_Layout.cshtml" />
-    <Content Include="Views\Admin\Compensation.cshtml" />
-    <Content Include="Views\Admin\EditActivity.cshtml" />
-    <Content Include="Views\Admin\EditActivityOrder.cshtml" />
-    <Content Include="Views\Admin\EditHomestay.cshtml" />
-    <Content Include="Views\Admin\EditHomestayOrder.cshtml" />
-    <Content Include="Views\Admin\Index.cshtml" />
-    <Content Include="Views\Admin\ViewActivity.cshtml" />
-    <Content Include="Views\Admin\ViewActivityOrder.cshtml" />
-    <Content Include="Views\Admin\ViewHomestay.cshtml" />
-    <Content Include="Views\Admin\ViewHomestayOrder.cshtml" />
     <Content Include="Views\Activity\EditActivity.cshtml" />
     <Content Include="Views\HomeStay\Index.cshtml" />
     <Content Include="Views\HomeStay\Release.cshtml" />
-    <Content Include="Views\HomeStay\Special.cshtml" />
     <Content Include="Views\HomeStay\StayInfo.cshtml" />
     <Content Include="Views\Home\Favourites.cshtml" />
     <Content Include="Views\Admin\ViewBlog.cshtml" />
     <Content Include="Views\Blog\BlogDetail.cshtml" />
     <Content Include="Views\Blog\NewBlog.cshtml" />
+    <Content Include="Views\Admin\Admin_Layout.cshtml" />
+    <Content Include="Views\Admin\CommentActivity.cshtml" />
+    <Content Include="Views\Admin\CommentHomestay.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\ViewActivity.cshtml" />
+    <Content Include="Views\Admin\ViewHomestay.cshtml" />
+    <Content Include="Views\Admin\checkMyActivityOrder.cshtml" />
+    <Content Include="Views\Admin\checkMyAOrder.cshtml" />
+    <Content Include="Views\Admin\checkMyHomestayOrder.cshtml" />
+    <Content Include="Views\Admin\checkMyHOrder.cshtml" />
+    <Content Include="Views\Admin\ViewActivityInstance.cshtml" />
+    <Content Include="Views\Admin\ViewHomestaySpecial.cshtml" />
+    <Content Include="Views\HomeStay\EditHomestay.cshtml" />
+    <Content Include="Views\HomeStay\Special.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
